--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon src/app.js",
-    "dev": "nodemon src/app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,9 +16,13 @@
     "https": "^1.0.0",
     "mongodb": "2.2.33",
     "morgan": "^1.10.0",
+    "npm": "^8.3.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
+  },
+  "engines": {
+    "node": "16.13.0"
   }
 }
